--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadDbActivity"/>
+        <activity android:name=".Course.a_course_main_j"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Volunteer.a_volun_main_j"
+        android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".English.a_english_main_j"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Book.a_book_main_j"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 
